Change jdk 21 > 17